# src/models/TokenPriceModel.ts
@@ -1,0 +1,4 @@
+export interface TokenPriceModel {
+  symbol: string;
+  price: number;
+}
